# morph

./: Backlog.md  console.html  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: RELEASE_NOTES_TEMPLATE.md
.github/workflows/: tauri-tag-build.yml
.workflow/: pipeline.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: console.json  default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/resources/: config.json
src-tauri/src/: assets.rs  config.rs  latency.rs  lib.rs  main.rs  settings.rs  singbox.rs  subscriptions.rs
src/Layout/: index.tsx
src/assets/svg/: index.tsx
src/bus/subscription/: index.ts
src/hooks/: useUpdateCheck.tsx
src/pages/Home/: const.tsx  index.tsx
src/pages/Home/ControlToolbar/: index.tsx
src/pages/Home/NodeList/: index.tsx
src/pages/Home/StatusCard/: index.tsx
src/pages/Home/hooks/: useNetworkTester.ts  useNodeData.ts  useProxyManager.ts
src/pages/Logs/: index.tsx
src/pages/Settings/: UpdateCard.tsx  index.tsx
src/pages/Subscriptions/: index.tsx
src/pages/subscriptions/: index.tsx
src/pages/subscriptions/components/AddSubscriptions/: index.tsx
src/pages/subscriptions/components/List/: index.tsx
src/router/: index.tsx
src/services/: index.ts  utils.ts
src/services/file/: config.ts  direct.ts  pac.ts  servers.ts  subscriptions.ts
src/store/: homeStore.ts
src/styles/: global.css  index.css  tailwindcss.css
src/utils/: storage.ts  store.ts
src/utils/color/: index.ts
src/utils/request/: index.ts
src/utils/subscribeParser/: index.ts
src/worker/: latencyWorker.ts
