[package]
name = "proxy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "proxy_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = [] }
tauri-plugin-opener = "2.1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.104"
tauri-plugin-fs = "2"
