[package]
name = "proxy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "proxy_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = [] }
tauri-plugin-opener = "2.1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.104"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
winreg = "0.52" # 用于修改注册表
anyhow = "1.0"  # 用于错误处理

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinInet",
    "Win32_Foundation"
] }
