[package]
name = "proxy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "proxy_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = ["tray-icon"] }
tauri-plugin-opener = "2.1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.104"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2.0.0"
reqwest = { version = "0.12", features = ["json", "blocking", "socks", "rustls-tls"] }
rss = "2.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
log = "0.4"
base64 = "0.21" 
url = "2.4" 
uuid = { version = "1.4", features = ["v4"] }
urlencoding = "2.1"
sysproxy = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
